--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     </div>
 
     </header>
+    <div class="announcement-bar">
+  <div class="announcement-track">
+
+    <span>⚽ Open Tournament 7 Side — Register Now</span>
+    <span>🔥 20% Discount on Early Registration</span>
+    <span>🏆 Organized by FC Khad Bathlour Since 2016</span>
+    <span>📍 Location: Khad Bathlour, Ropar, Punjab</span>
+    <span>📅 Limited Slots — Only 16 Teams</span>
+
+  </div>
+</div>
 
     <section class="hero">
 
