--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
 <h2>About Club</h2>
 
-<p>Founded in 2016, FC is one of the best football clubs in Ropar, Punjab.</p>
+<p>Founded in 2016, KhadBathlourFC is one of the best football clubs in Ropar, Punjab.</p>
 
 </div>
 
