--- a/teams.html
+++ b/teams.html
@@ -17,7 +17,7 @@
 
 <div class="navbar">
 
-<div class="logo">FC</div>
+<div class="logo">Khad Bathlour FC</div>
 
 <div class="hamburger">☰</div>
 
