--- a/index.html
+++ b/index.html
@@ -55,12 +55,40 @@
 
 
     </div>
+    <!-- Font Awesome CDN -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
-    <footer>
+<footer class="footer">
+    <h2>Follow Us</h2>
 
-    <p>Khad Bathlour © 2026</p>
+    <div class="social-icons">
+        <a href="#" class="icon instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
 
-    </footer>
+        <a href="#" class="icon whatsapp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+
+        <a href="#" class="icon facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+
+        <a href="#" class="icon youtube">
+            <i class="fab fa-youtube"></i>
+        </a>
+
+        <a href="#" class="icon google">
+            <i class="fab fa-google"></i>
+        </a>
+    </div>
+
+    <p class="copyright">
+        © 2026 Khad Bathlour. All Rights Reserved.
+    </p>
+</footer>
+
+
     
 </body>
 <html>
