--- a/teams.html
+++ b/teams.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>FC Teams</title>
+<title>Teams</title>
 
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/teams.css">
