--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<title>FC Official</title>
+<title>Khad Bathlour FC Official</title>
 
 <link rel="stylesheet" href="css/style.css">
 
