--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 
-<title>About</title>
+<title>About FC</title>
 
 <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/about.css">
 
-<script src="js/script.js"></script>
-<script src="js/about.js"></script>
+<script defer src="js/about.js"></script>
 
 </head>
 
@@ -17,13 +17,11 @@
 
 <div class="navbar">
 
-<div class="logo">Khad Bathlour FC</div>
+<div class="logo">FC</div>
 
-<div class="hamburger" onclick="toggleMenu()">
-☰
-</div>
+<div class="hamburger">☰</div>
 
-<div class="nav-links" id="navLinks">
+<div class="nav-links">
 
 <a href="index.html">Home</a>
 <a href="about.html">About</a>
@@ -39,18 +37,46 @@
 
 </header>
 
+<section class="about-hero">
+
+<div class="about-slide active"
+style="background-image:url('1.png')"></div>
+
+<div class="about-slide"
+style="background-image:url('1.png')"></div>
+
+<div class="about-overlay"></div>
+
+<div class="about-content">
+
+<h1>About FC</h1>
+
+<p>Founded 2016 • Khad Bathlour, Ropar, Punjab • Football Club</p>
+
+</div>
+
+</section>
 
 <div class="container">
 
 <div class="card">
 
-<h2>About Club</h2>
+<h2>Our Story</h2>
 
-<p>Founded in 2016, KhadBathlourFC is one of the best football clubs in Ropar, Punjab.</p>
+<p>
+Khad Bathlour football Club is a professional village football club organizing all open tournaments,training events
+developing players, and building football culture.
+</p>
 
 </div>
 
 </div>
+
+<footer>
+
+<p>Khad Bathlour © 2026</p>
+
+</footer>
+
 </body>
-
 </html>
