--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Football Club</title>
+<title>Khad Bathlour FC Official Website</title>
 </head>
 <body>
 <div id="root"></div>
